--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <div class="game-container">
       <div class="chef-square" id="chef"></div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
