adjusted chef image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <div class="game-container">
-      <div class="chef-square" id="chef"></div>
+      <img
+        class="chef-square"
+        src="images/chef.png"
+        id="chef"
+        alt="cute alien chef"
+      />
     </div>
     <script src="script.js"></script>
   </body>
